k8s/frontend-deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: full-stack-docker-app-frontend:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 30001
---
# service
apiVersion: v1  
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - port: 30001
      targetPort: 30001
